<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <TextView
        android:id="@+id/instruction_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="100dp"
        android:layout_alignParentTop="true"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold"
        android:text="@string/take_left_pic"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_in_3d"

            android:layout_margin="25dp"
            android:id="@+id/button_show_3d"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_photo_text"

            android:layout_margin="25dp"
            android:id="@+id/button_take_photo"
            />
    </LinearLayout>

    <ImageView
        android:layout_margin="50dp"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:id="@+id/image"
        android:contentDescription="@string/image_description" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingBottom="200dp"
        android:orientation="vertical"
        android:id="@+id/generating_layout"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/generating_mesh_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:background="#444"
            android:text="@string/generating_mesh_text"
            android:textColor="@color/black"
            android:textColorHighlight="@color/white"
            android:textSize="20sp" />

        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_below="@id/generating_mesh_text"
            android:id="@+id/progress_circular"
            android:layout_centerHorizontal="true"
            />



    </RelativeLayout>

</RelativeLayout>